# memorytwin

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  migrate_db.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: README.md  demo.py
scripts/: inspect_latest_memory.py  migrate_to_server.py  mt.bat  setup-memorytwin.ps1
src/memorytwin/: __init__.py  config.py  consolidation.py  models.py  observability.py  scoring.py
src/memorytwin/escriba/: __init__.py  cli.py  escriba.py  processor.py  project_analyzer.py  storage.py  storage_chromadb_server.py  storage_interface.py
src/memorytwin/mcp_server/: __init__.py  server.py
src/memorytwin/oraculo/: __init__.py  app.py  oraculo.py  rag_engine.py
tests/: __init__.py  conftest.py  test_config.py  test_escriba.py  test_mcp_server.py  test_meta_memory.py  test_models.py  test_observability.py  test_processor.py  test_rag_engine.py  test_scoring.py  test_storage.py
