[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memorytwin"
version = "0.1.0"
description = "Agente de Memoria Episódica para Desarrollo de Software - Arquitectura dual Escriba + Oráculo"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Memory Twin Team"}
]
keywords = ["ai", "memory", "rag", "mcp", "copilot", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core - Siempre necesarias
    "google-generativeai>=0.8.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
# Interfaz web (Oráculo UI)
ui = [
    "gradio>=4.0.0",
]

# Observabilidad
observability = [
    "langfuse>=2.0.0",
]

# Base de datos SQL (para escalabilidad)
sql = [
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
]

# Proveedores LLM alternativos
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.30.0",
]

# Todas las features
all = [
    "memorytwin[ui,observability,sql,openai,anthropic]",
]

# Desarrollo
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
memorytwin-escriba = "memorytwin.escriba.cli:main"
memorytwin-oraculo = "memorytwin.oraculo.app:main"
memorytwin-mcp = "memorytwin.mcp_server.server:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
